# serializer version: 1
# name: test_code_version_changes_propagate
  dict({
    'base': dict({
      'data': '6dd71299f6e93f91b62ae9a93ec1a030b83d92c5ab6917ca3643c5889e796a72',
    }),
    'derived': dict({
      'processed': '8fcd79f1e165b9b5b0b72f9a63103808ea9e96439dfdd37791c2b303c84b5e67',
    }),
  })
# ---
# name: test_complex_multi_level_graph
  dict({
    'analysis': dict({
      'full_analysis': 'f11c09bafd771ac31e4e9984d0ce1a99f589d16adfe5565303de784b1a149775',
      'visual_metadata': '8527b2ddca8b3b8cd73a760f5841e9afda3670cb12b42f5e66758317c8cc72e3',
    }),
    'processed_video': dict({
      'enhanced_frames': 'bce72e4f538d9ff9e6934ffc3ae43b792face388fba1f828e08dc84633f2ca38',
      'normalized_audio': 'ffccf798b5f6dee659197570d5d9231eed1cb9ccf5bb79bf4c6cf00529e7c0d2',
    }),
    'raw_metadata': dict({
      'info': '3e146e4d524d618ea73b6b0232fd05e462e3224ba1aaf9f4e564efd2cab5d4b2',
    }),
    'raw_video': dict({
      'audio': '678d3e83d66dd32559d518c9d70f1101be85cfd2a3d4a2e8cd16bb49427cc336',
      'frames': 'be12e9e4f2878176fa759e9505eae710188527e656b6786af444bcf1e979df1d',
    }),
  })
# ---
# name: test_diamond_dependency_graph
  dict({
    'branch_left': dict({
      'left_processed': '8499ba90006b890f1e153ba9f022dac81da2183165b8edcb51899cb7c866d38b',
    }),
    'branch_right': dict({
      'right_processed': '4cd36bc6c21ffd090cacb4d0231952c330243216cc50805307f926a32e4d216d',
    }),
    'merged': dict({
      'fusion': 'ee1f6dd3d1a96c98bb3ea8bec3854e47164487a4525b0b04b0c993f32d4eb592',
    }),
    'root': dict({
      'data': '636edb1af7d998b6976f6e11595357bb75a5a596661994ca8145955f850e2cf6',
    }),
  })
# ---
# name: test_feature_with_multiple_fields
  dict({
    'audio': 'ab11f4a65d39f51402bc4eb224822d38ddcb24831ac53a5b124c333a42a5f4a3',
    'frames': 'd6e150f0fd72262c17770d4886290fa8ca25b5d4516389a64a654db718b0a8dd',
    'metadata': '1140d01855d890bb4dfa521c9fb1114a5a861a3a6556ffa81cc7d5a28e1d3c9d',
  })
# ---
# name: test_linear_dependency_chain
  dict({
    'a': dict({
      'raw': '1075ae9f96a59488bacfc0a20f799d232243ea26a07079f4227ee3299c90f597',
    }),
    'b': dict({
      'processed': '936881be29e23b022f89486a25bd67b34abe2bc10c6a6d46339c724882918fee',
    }),
    'c': dict({
      'final': '795f3135ad8a996a2d9de4398d710befd48c73ba3a66ced0751e0cf82bb56cdc',
    }),
  })
# ---
# name: test_multiple_fields_different_deps
  dict({
    'x': dict({
      'x1': 'f040ee10ef63d16928f823dcaddccbb837488070747b37152a279430e9ff2300',
      'x2': '714066d27ea09f099fe2bb56b01ba7432cc579d8b08f30cac017dce0802003ef',
    }),
    'y': dict({
      'y1': '1af01721d81c3e15bbff016e9e91bcfba968ba3a420c45daf3c2824c2f432b81',
      'y2': '9a5b36fb708e70c11c6d4759a19551d14eb87df6c86b7af410a259b741e276ed',
    }),
    'z': dict({
      'z1': '419a88d50544185f047adbaeedd448718b9a7df4481f8bf94dcb33753b24fd48',
      'z2': '954f9936ceccd687fe396d4c871d464b237a965d786934cb9354c9461696dbb0',
      'z3': '2de311f286c82212d019c42aaff6d08e7c4282aec2a6521a18de8befccaef11d',
    }),
  })
# ---
# name: test_single_feature_data_version
  dict({
    'default': '1428690189d4145891f390b4af374c266863c5d3a0a6b24e81d73edf399cc33f',
  })
# ---
# name: test_specific_field_dependencies
  dict({
    'multi': dict({
      'audio': 'e8586a193e228d0876163543a10104afa31026e7b38955ca7ef3c2045fc019f1',
      'frames': 'e32699cc24a597db2388d427f1cd5e60d176994f7ceefaa697b65f1ea0fc194c',
      'text': 'f067c22d1664e3b315388100e3bb10d9f8feab9df3a011517545c7fe1db3fb19',
    }),
    'selective': dict({
      'audio_only': '32a990ed6c83735144f87b2cc135b55068e6171fc0d554458b1e6b5e41ced7a0',
      'mixed': '9dfac4f2835e9dd026689e3771db6bc22dca5208a24dc9b5dc8443b5ed56e0e1',
      'visual': 'f9f46bc326619513e760b2ccaf5c2834e889aa963ad380f1d5b6ee0694c52275',
    }),
  })
# ---
